More font fixes and reable spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ padding: 20px;
 	-webkit-animation: gradient 15s ease infinite;
     animation: gradient 15s ease infinite;
     background-image: url(https://mdbootstrap.com/img/Photos/Others/gradient1.jpg);
-    color: white;
+    color: black;
     text-align: center;
 }
 
@@ -62,15 +62,15 @@ padding: 20px;
 
 .lead {
     text-align: center;
-    font-size: 20px;
-    color: white;
+    font-size: 1.5rem;
+    color: black;
     letter-spacing:normal;
     line-height: normal;
 
 }
 #indexH3  {
     font-size: 23px;
-    color: white;
+    color: black;
     letter-spacing:normal;
     line-height: normal;
     line-height: 30px;
@@ -106,8 +106,8 @@ padding: 20px;
 }
 .display-4 {
     font-weight: bolder;
-    font-size: 40px;
-    color: white;
+    font-size: 2.5rem;
+    color: black;
     text-shadow: -4px 2px 4px rgba(0,0,0,0.53);
     letter-spacing: normal;
     line-height: normal;
@@ -115,11 +115,11 @@ padding: 20px;
 #display-4-header {
     font-weight: bolder;
     font-size: 40px;
-    color: white;
+    color: black;
 }
 #detailsPara{
     padding-top: 10px;
-    color: white;
+    color: black;
 }
 #containerAdvertise {
     text-align: center;
@@ -132,13 +132,13 @@ padding: 20px;
     padding-left: 10px;
     padding-right: 10px;
     font-weight: bolder;
-    color: white;
-    font-size: 22px;
+    color: black;
+    font-size: 2rem;
 }
 #headerTwoProduct {
     padding-top: 20px;
     font-weight: bolder;
-    color: white;
+    color: black;
     font-size: 22px;
 }
 .invalid-feedback {
@@ -156,12 +156,12 @@ padding: 20px;
 
 .admin-heading {
     font-size: 40px;
-    color: white;
+    color: black;
     margin: auto;
 }
 
 .admin-options li {
-    color: white;
+    color: black;
 }
 
 .pending-list {
@@ -188,7 +188,7 @@ padding: 20px;
 
 .discountedPrice {
     background-color: green;
-    color: white;
+    color: black;
     font-size: 22px;
 }
 
@@ -236,9 +236,9 @@ padding: 20px;
     padding-top: 20px;
 }
 #aboutUs, #aboutUsTwo {
-    font-weight: bolder;
-    font-size: 18px;
-    color: white;
+    font-weight: normal;
+    font-size: 20px;
+    color: black;
 }
 
 .controlDescHeight {
